--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_USERNAME="superuser"
-MONGO_PASSWORD="kCQ8aLagPZyUJ6mU"
+MONGO_USERNAME="superUser"
+MONGO_PASSWORD="3GmWEJLG1DwOG174"
 
 SERVER_PORT="9090"
